--- a/auth/package.json
+++ b/auth/package.json
@@ -5,7 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node-dev src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll --no-cache"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./src/test/setup.ts"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -23,5 +30,13 @@
     "mongoose": "^8.7.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.2"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.13",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.0.1",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5"
   }
 }
