--- a/payments/package.json
+++ b/payments/package.json
@@ -37,7 +37,9 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.13",
+    "@types/node": "^22.9.0",
     "@types/supertest": "^6.0.2",
+    "dotenv": "^16.4.5",
     "jest": "^29.7.0",
     "mongodb-memory-server": "^10.0.1",
     "supertest": "^7.0.0",
